# os-syslog-ng

./: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  dist.conf  syslog-ng-config.h  syslog-ng.spec  syslog-ng_3.19.1.orig.tar.gz.delta  syslog-ng_3.19.1.orig.tar.gz.id  syslog-ng_3.28.1.orig.tar.gz.delta  syslog-ng_3.28.1.orig.tar.gz.id  syslog-ng_3.3.4.dfsg.orig.tar.xz.delta  syslog-ng_3.3.4.dfsg.orig.tar.xz.id  syslog-ng_3.38.1.orig.tar.gz.delta  syslog-ng_3.38.1.orig.tar.gz.id  syslog-ng_3.5.6.orig.tar.xz.delta  syslog-ng_3.5.6.orig.tar.xz.id  syslog-ng_3.8.1.orig.tar.gz.delta  syslog-ng_3.8.1.orig.tar.gz.id
modules/afmongodb/libmongo-client/: .gitignore  .travis.yml  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README.md  README.rst  aclocal.m4  config.h.in  configure  configure.ac
modules/afmongodb/libmongo-client/docs/: Makefile.am  Makefile.in
modules/afmongodb/libmongo-client/docs/tutorial/: Makefile.am  Makefile.in  tut_bson.h  tut_bson_build.h  tut_bson_traverse.h  tut_hl_client.h  tut_json2bson.h  tut_mongo_sync.h  tut_mongo_sync_cmd_create.h  tut_mongo_sync_cmd_custom.h  tut_mongo_sync_cmd_index_create.h  tut_mongo_sync_connect.h  tut_mongo_sync_insert.h  tut_mongo_sync_query.h  tut_mongo_sync_query_complex.h  tutorial.h
modules/afmongodb/libmongo-client/docs/tutorial/examples/: GNUmakefile  tut_bson_build.c  tut_bson_build.json  tut_bson_traverse.c  tut_hl_client.c  tut_json2bson.c  tut_mongo_sync.c  tut_mongo_sync_cmd_create.c  tut_mongo_sync_cmd_custom.c  tut_mongo_sync_cmd_index_create.c
modules/afmongodb/libmongo-client/examples/: Makefile.am  Makefile.in  bson-inspect.c  gridfs.c  mongo-dump.c
modules/afmongodb/libmongo-client/src/: Makefile.am  Makefile.in  bson.c  bson.h  compat.c  compat.h  libmongo-client.ver  libmongo-macros.h  libmongo-private.h  mongo-client.c  mongo-client.h  mongo-sync-cursor.c  mongo-sync-cursor.h  mongo-sync-pool.c  mongo-sync-pool.h  mongo-sync.c  mongo-sync.h  mongo-utils.c  mongo-utils.h  mongo-wire.c  mongo-wire.h  mongo.h  sync-gridfs-chunk.c  sync-gridfs-chunk.h  sync-gridfs-stream.c  sync-gridfs-stream.h  sync-gridfs.c  sync-gridfs.h
modules/afmongodb/libmongo-client/tests/: Makefile.am  Makefile.in  README  coverage.sh  runall  test_cleanup.c
modules/afmongodb/libmongo-client/tests/func/bson/: f_weird_types.c  huge_doc.c
modules/afmongodb/libmongo-client/tests/func/mongo/client/: f_client_big_packet.c
modules/afmongodb/libmongo-client/tests/func/mongo/sync/: f_sync_auto_reauth.c  f_sync_auto_reconnect.c  f_sync_conn_seed_add.c  f_sync_invalid_getlasterror.c  f_sync_max_insert_size.c  f_sync_oidtest.c  f_sync_safe_mode.c
modules/afmongodb/libmongo-client/tests/func/mongo/sync-cursor/: f_sync_cursor_iterate.c  f_sync_cursor_tailable.c
modules/afmongodb/libmongo-client/tests/func/mongo/sync-gridfs-chunk/: f_sync_gridfs_chunk.c
modules/afmongodb/libmongo-client/tests/func/mongo/sync-gridfs-stream/: f_sync_gridfs_stream.c
modules/afmongodb/libmongo-client/tests/func/mongo/sync-pool/: f_sync_pool.c
modules/afmongodb/libmongo-client/tests/libtap/: Makefile.am  Makefile.in  tap.c  test.c  test.h
modules/afmongodb/libmongo-client/tests/perf/bson/: p_bson_find.c
modules/afmongodb/libmongo-client/tests/tools/: coverage-report-entry.pl  coverage-report.pl  coverage-report.xsl
modules/afmongodb/libmongo-client/tests/unit/bson/: bson_append_array.c  bson_append_binary.c  bson_append_boolean.c  bson_append_document.c  bson_append_double.c  bson_append_int32.c  bson_append_int64.c  bson_append_js_code.c  bson_append_js_code_w_scope.c  bson_append_null.c  bson_append_oid.c  bson_append_regexp.c  bson_append_string.c  bson_append_symbol.c  bson_append_timestamp.c  bson_append_utc_datetime.c  bson_build.c  bson_build_full.c  bson_cursor_find.c  bson_cursor_find_next.c  bson_cursor_get_array.c  bson_cursor_get_binary.c  bson_cursor_get_boolean.c  bson_cursor_get_document.c  bson_cursor_get_double.c  bson_cursor_get_int32.c  bson_cursor_get_int64.c  bson_cursor_get_javascript.c  bson_cursor_get_javascript_w_scope.c  bson_cursor_get_oid.c  bson_cursor_get_regex.c  bson_cursor_get_string.c  bson_cursor_get_symbol.c  bson_cursor_get_timestamp.c  bson_cursor_get_utc_datetime.c  bson_cursor_key.c  bson_cursor_new.c  bson_cursor_next.c  bson_cursor_type.c  bson_cursor_type_as_string.c  (+7 more)
modules/afmongodb/libmongo-client/tests/unit/mongo/client/: connect.c  connection_get_requestid.c  connection_set_timeout.c  disconnect.c  packet_recv.c  packet_send.c
modules/afmongodb/libmongo-client/tests/unit/mongo/sync/: sync_cmd_authenticate.c  sync_cmd_count.c  sync_cmd_create.c  sync_cmd_custom.c  sync_cmd_delete.c  sync_cmd_drop.c  sync_cmd_exists.c  sync_cmd_get_last_error.c  sync_cmd_get_more.c  sync_cmd_index_create.c  sync_cmd_index_drop.c  sync_cmd_index_drop_all.c  sync_cmd_insert.c  sync_cmd_insert_n.c  sync_cmd_is_master.c  sync_cmd_kill_cursors.c  sync_cmd_ping.c  sync_cmd_query.c  sync_cmd_reset_error.c  sync_cmd_update.c  sync_cmd_user_add.c  sync_cmd_user_add_with_roles.c  sync_cmd_user_remove.c  sync_conn_seed_add.c  (+7 more)
modules/afmongodb/libmongo-client/tests/unit/mongo/sync-cursor/: sync_cursor_free.c  sync_cursor_get_data.c  sync_cursor_new.c  sync_cursor_next.c
modules/afmongodb/libmongo-client/tests/unit/mongo/sync-gridfs/: sync_gridfs_file_get_metadata.c  sync_gridfs_free.c  sync_gridfs_get_set_chunk_size.c  sync_gridfs_list.c  sync_gridfs_new.c  sync_gridfs_remove.c
modules/afmongodb/libmongo-client/tests/unit/mongo/sync-gridfs-chunk/: sync_gridfs_chunked_file_cursor_get_chunk.c  sync_gridfs_chunked_file_cursor_new.c  sync_gridfs_chunked_file_free.c  sync_gridfs_chunked_file_new_from_buffer.c  sync_gridfs_chunked_find.c
modules/afmongodb/libmongo-client/tests/unit/mongo/sync-gridfs-stream/: sync_gridfs_stream_close.c  sync_gridfs_stream_find.c  sync_gridfs_stream_new.c  sync_gridfs_stream_read.c  sync_gridfs_stream_seek.c  sync_gridfs_stream_write.c
modules/afmongodb/libmongo-client/tests/unit/mongo/sync-pool/: sync_pool_free.c  sync_pool_new.c  sync_pool_pick.c  sync_pool_return.c
(+293 files in other folders)
