EXTRA_DIST	= tutorial.h \
		  examples/GNUmakefile \
		  tut_bson.h \
			tut_bson_build.h examples/tut_bson_build.c examples/tut_bson_build.json \
			tut_bson_traverse.h examples/tut_bson_traverse.c \
		  tut_mongo_sync.h \
			tut_mongo_sync_connect.h tut_mongo_sync_insert.h \
			tut_mongo_sync_query.h tut_mongo_sync_query_complex.h \
			examples/tut_mongo_sync.c \
		  tut_mongo_sync_cmd_create.h \
			examples/tut_mongo_sync_cmd_create.c \
		  tut_hl_client.h examples/tut_hl_client.c \
		  tut_json2bson.h examples/tut_json2bson.c
